--- a/plugin.xml
+++ b/plugin.xml
@@ -32,6 +32,7 @@
 
         <source-file src="src/android/LowLatencyAudio.java" target-dir="src/com/rjfun/cordova/plugin" />
         <source-file src="src/android/LowLatencyAudioAsset.java" target-dir="src/com/rjfun/cordova/plugin" />
+        <source-file src="src/android/LowLatencyCompletionHandler.java" target-dir="src/com/rjfun/cordova/plugin" />
         <source-file src="src/android/PolyphonicVoice.java" target-dir="src/com/rjfun/cordova/plugin" />
 
      </platform>
