Adding missing AVAUdioSession framework for IOS in the plugin metadata

--- a/plugin.xml
+++ b/plugin.xml
@@ -49,6 +49,7 @@
          <framework src="Foundation.framework" />
          <framework src="AVFoundation.framework" />
          <framework src="AudioToolbox.framework" />
+         <framework src="AVAudioSession.framework" />
 
          <header-file src="src/ios/LowLatencyAudio.h" />
          <source-file src="src/ios/LowLatencyAudio.m" />
